[gd_scene load_steps=9 format=2]

[ext_resource path="res://Themes/themeMenu.tres" type="Theme" id=1]
[ext_resource path="res://Assets/Images/logo.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/space.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Images/logo2.png" type="Texture" id=5]
[ext_resource path="res://Scenes/contScores.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/contLogo.gd" type="Script" id=7]
[ext_resource path="res://Scripts/texMenuBG.gd" type="Script" id=8]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texMenuBG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -300.0
margin_right = 300.0
margin_bottom = 300.0
texture = ExtResource( 3 )
stretch_mode = 2
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contLogo" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 0.3
alignment = 1
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texIDLE" type="TextureRect" parent="contLogo"]
margin_right = 1080.0
margin_bottom = 370.0
size_flags_vertical = 3
texture = ExtResource( 2 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="texBREAKER" type="TextureRect" parent="contLogo"]
margin_top = 374.0
margin_right = 1080.0
margin_bottom = 576.0
texture = ExtResource( 5 )
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timerBounce" type="Timer" parent="contLogo"]
process_mode = 0
autostart = true

[node name="contButtons" type="VBoxContainer" parent="."]
anchor_left = 0.15
anchor_top = 0.25
anchor_right = 0.85
anchor_bottom = 0.7
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnPlay" type="Button" parent="contButtons"]
margin_top = 164.0
margin_right = 756.0
margin_bottom = 283.056
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnStore" type="Button" parent="contButtons"]
margin_top = 303.0
margin_right = 756.0
margin_bottom = 422.056
text = "Store"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnSettings" type="Button" parent="contButtons"]
margin_top = 442.0
margin_right = 756.0
margin_bottom = 561.056
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnReset" type="Button" parent="contButtons"]
margin_top = 581.0
margin_right = 756.0
margin_bottom = 700.056
text = "Reset data"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contScores" parent="." instance=ExtResource( 6 )]
anchor_top = 0.7
anchor_bottom = 0.9
[connection signal="pressed" from="contButtons/btnPlay" to="." method="_on_btnPlay_pressed"]
[connection signal="pressed" from="contButtons/btnStore" to="." method="_on_btnStore_pressed"]
[connection signal="pressed" from="contButtons/btnSettings" to="." method="_on_btnSettings_pressed"]
[connection signal="pressed" from="contButtons/btnReset" to="." method="_on_btnReset_pressed"]
